changed get location to post/ added preloader

--- a/index.html
+++ b/index.html
@@ -55,6 +55,23 @@
         </div>
     </nav>
 
+    <section>
+        <article class="background preloader">
+            <div class="a"></div>
+            <div class="b"></div>
+            <div class="c"></div>
+            <div class="d"></div>
+            <div class="e"></div>
+            <div class="f"></div>
+            <div class="g"></div>
+            <div class="h"></div>
+            <div class="i"></div>
+            <div class="j"></div>
+            <div class="k"></div>
+            <div class="l"></div>
+        </article>
+    </section>
+
     <!--Employee data table-->
 
     <table class="table">
