--- a/index.html
+++ b/index.html
@@ -55,23 +55,6 @@
         </div>
     </nav>
 
-    <section>
-        <article class="background preloader">
-            <div class="a"></div>
-            <div class="b"></div>
-            <div class="c"></div>
-            <div class="d"></div>
-            <div class="e"></div>
-            <div class="f"></div>
-            <div class="g"></div>
-            <div class="h"></div>
-            <div class="i"></div>
-            <div class="j"></div>
-            <div class="k"></div>
-            <div class="l"></div>
-        </article>
-    </section>
-
     <!--Employee data table-->
 
     <table class="table">
@@ -408,6 +391,16 @@
             </div>
         </div>
     </div>
+    
+
+    <div class="card br" id = 'preloader'>
+        <div class="wrapper">
+            <div class="profilePic animate"></div>
+            <div class="comment br animate w80"></div>
+            <div class="comment br animate"></div>
+            <div class="comment br animate"></div>
+        </div>
+    <div>
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 	<script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
