split table crud dropdown

--- a/index.html
+++ b/index.html
@@ -35,15 +35,27 @@
                 </ul>
                 </li>
                 <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    Insert
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown-p" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Personnel
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown-p">
+                    <li><a class="dropdown-item insert_employee" >Employee</a></li>
+                </ul>
+                </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown-D" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Department
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown-D">
+                    <li><a class="dropdown-item get_department" >Department</a></li>
+                </ul>
+                </li>
+                <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown-L" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Location
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item get_department" >Department</a></li>
-                    <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item get_location" >Location</a></li>
-                    <li><hr class="dropdown-divider"></li>
-                    <li><a class="dropdown-item insert_employee" >Employee</a></li>
                 </ul>
                 </li>
             </ul>
