removed caching from js file, moved search/ filter functionallity to server

--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
                     Sort
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <li><a class="dropdown-item first_name_sort" href="#">First Name</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item last_name_sort" href="#">Last Name</a></li>
+                    <li><hr class="dropdown-divider"></li>
+                    <li><a class="dropdown-item email_sort" href="#">Email</a></li>
+                    <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item department_sort" href="#">Department</a></li>
                     <li><hr class="dropdown-divider"></li>
                     <li><a class="dropdown-item location_sort" href="#">Location</a></li>
@@ -73,7 +79,7 @@
         <thead>
             <tr>
             <th scope="row"></th>
-            <th scope="col"><a class = 'althapbetical_sort'>First Name</a></th>
+            <th scope="col"><a class = 'first_name_sort'>First Name</a></th>
             <th scope="col"><a class = 'last_name_sort'>Last Name</a></th>
             <th scope="col"><a class = 'department_sort'>Department</a></th>
             <th scope="col"><a class = 'location_sort'>Location</a></th>
