reworked mobile display

--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
                 <th scope="row"></th>
                 <th scope="col"><a class = 'first_name_sort'>First Name</a></th>
                 <th scope="col"><a class = 'last_name_sort'>Last Name</a></th>
-                <th scope="col"><a class = 'department_sort'>Department</a></th>
-                <th scope="col"><a class = 'location_sort'>Location</a></th>
-                <th scope="col"><a class = 'email_sort'>Email</a></th>
-                <th scope="col">Edit</th>
-                <th scope="col">Delete</th>
+                <th scope="col"><a class = 'department_sort hide'>Department</a></th>
+                <th scope="col"><a class = 'location_sort hide'>Location</a></th>
+                <th scope="col"><a class = 'email_sort hide'>Email</a></th>
+                <th scope="col" class = 'hide'>Edit</th>
+                <th scope="col" class = 'hide'>Delete</th>
                 </tr>
             </thead>
             
