--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 
     <!--Department list modal-->
 
-    <div class="modal deparment_modal" tabindex="-1">
+    <div class="modal department_modal" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
             <div class="modal-header">
@@ -293,7 +293,7 @@
             </div>
             <div class="modal-body">
                 <div class="input-group">
-                    <p>Are you sure you would like to add this entry to deparments?</p>
+                    <p>Are you sure you would like to add this entry to deparmtents?</p>
                 </div>
             </div>
             <div class="modal-footer">
@@ -304,7 +304,7 @@
         </div>
     </div>
 
-    <!--Deparment cofirm delete modal-->
+    <!--Department cofirm delete modal-->
 
     <div class="modal confirm_delete_modal center"  tabindex="-1">
         <div class="modal-dialog">
