added name info to delete failed modal

--- a/index.html
+++ b/index.html
@@ -453,8 +453,8 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <div class="input-group">
-                    <p>This item could not be deleted as it contains dependencies</p>
+                <div class="input-group delete_fail_name">
+                    
                 </div>
             </div>
             <div class="modal-footer">
