corrected error with insert emp over populating

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-secondary btn-sm myBtn" id="submit_insert_personnel" data-bs-toggle="modal" data-bs-target=".insert_personnel_modal">SAVE</button>
+                    <button type="button" class="btn btn-outline-secondary btn-sm myBtn" id="submit_insert_personnel" data-bs-dismiss="modal">SAVE</button>
                     <button type="button" class="btn btn-outline-secondary btn-sm myBtn" data-bs-dismiss="modal" data-bs-toggle="modal" data-bs-target=".insert_personnel_modal">CANCEL</button>
                 </div>
             </div>
